--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "start": "webpack-dev-server",
     "build": "webpack",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "jest"
   },
   "keywords": [],
   "author": "",
@@ -25,6 +25,7 @@
     "css-minimizer-webpack-plugin": "4.2.2"
   }, "devDependencies": {
     "typescript": "5.3.3",
-    "ts-loader": "9.5.1"
+    "ts-loader": "9.5.1",
+    "jest": "29.7.0"
   }
 }
