--- a/package.json
+++ b/package.json
@@ -12,20 +12,25 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "webpack": "5.75.0",
-    "webpack-cli": "5.0.0",
-    "webpack-dev-server": "4.11.1",
     "copy-webpack-plugin": "11.0.0",
     "css-loader": "6.7.2",
-    "sass-loader": "13.2.0",
-    "node-sass": "8.0.0",
-    "mini-css-extract-plugin": "2.7.1",
+    "css-minimizer-webpack-plugin": "4.2.2",
     "html-minimizer-webpack-plugin": "4.3.0",
+    "mini-css-extract-plugin": "2.7.1",
+    "node-sass": "8.0.0",
+    "sass-loader": "13.2.0",
     "terser-webpack-plugin": "5.3.6",
-    "css-minimizer-webpack-plugin": "4.2.2"
-  }, "devDependencies": {
-    "typescript": "5.3.3",
+    "webpack": "5.75.0",
+    "webpack-cli": "5.0.0",
+    "webpack-dev-server": "4.11.1"
+  },
+  "devDependencies": {
+    "@babel/preset-typescript": "^7.23.3",
+    "@jest/globals": "^29.7.0",
+    "jest": "29.7.0",
     "ts-loader": "9.5.1",
-    "jest": "29.7.0"
+    "ts-node": "^10.9.2",
+    "ts-jest": "29.1.1",
+    "typescript": "5.3.3"
   }
 }
