--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "css-minimizer-webpack-plugin": "4.2.2",
     "html-minimizer-webpack-plugin": "4.3.0",
     "mini-css-extract-plugin": "2.7.1",
+    "jquery": "3.7.1",
     "node-sass": "8.0.0",
     "sass-loader": "13.2.0",
     "terser-webpack-plugin": "5.3.6",
