--- a/package.json
+++ b/package.json
@@ -16,8 +16,8 @@
     "css-loader": "6.7.2",
     "css-minimizer-webpack-plugin": "4.2.2",
     "html-minimizer-webpack-plugin": "4.3.0",
-    "mini-css-extract-plugin": "2.7.1",
     "jquery": "3.7.1",
+    "mini-css-extract-plugin": "2.7.1",
     "node-sass": "8.0.0",
     "sass-loader": "13.2.0",
     "terser-webpack-plugin": "5.3.6",
@@ -28,10 +28,11 @@
   "devDependencies": {
     "@babel/preset-typescript": "^7.23.3",
     "@jest/globals": "^29.7.0",
+    "@types/jquery": "^3.5.29",
     "jest": "29.7.0",
+    "ts-jest": "29.1.1",
     "ts-loader": "9.5.1",
     "ts-node": "^10.9.2",
-    "ts-jest": "29.1.1",
     "typescript": "5.3.3"
   }
 }
